--- a/index.html
+++ b/index.html
@@ -568,6 +568,194 @@ animation:fall linear forwards;}
   z-index:1;
 }
 
+/* =========================
+   GLOBAL RESPONSIVE FIXES
+========================= */
+*{
+  box-sizing:border-box;
+}
+
+body{
+  overflow-x:hidden;
+}
+
+/* =========================
+   PAGE CENTERING (ALL SCREENS)
+========================= */
+.page{
+  padding:20px;
+}
+
+/* =========================
+   PAGE 1 (STACK + TITLE)
+========================= */
+.hero{
+  max-width:1100px;
+  width:100%;
+  justify-content:center;
+}
+
+@media(max-width:1024px){
+  .hero{
+    gap:40px;
+  }
+}
+
+@media(max-width:768px){
+  .hero{
+    flex-direction:column;
+    text-align:center;
+  }
+
+  .stack{
+    width:300px;
+    height:200px;
+  }
+
+  .stack .env{
+    width:280px;
+    height:150px;
+  }
+
+  .side-title{
+    font-size:1.8rem;
+    white-space:normal;
+  }
+
+  .overlay-btn{
+    left:50%;
+    top:55%;
+  }
+}
+
+/* =========================
+   PAGE 2 GRID FIX
+========================= */
+.grid{
+  max-width:600px;
+  width:100%;
+  height:auto;
+  aspect-ratio: 3 / 2;
+}
+
+@media(max-width:768px){
+  .grid{
+    display:grid;
+    grid-template-columns:1fr 1fr;
+    gap:20px;
+    height:auto;
+  }
+
+  .envelope{
+    position:relative !important;
+    width:100%;
+    height:120px;
+  }
+
+  .envelope:nth-child(1),
+  .envelope:nth-child(2),
+  .envelope:nth-child(3),
+  .envelope:nth-child(4){
+    top:auto;
+    left:auto;
+    right:auto;
+    bottom:auto;
+  }
+}
+
+@media(max-width:480px){
+  .grid{
+    grid-template-columns:1fr;
+  }
+}
+
+/* =========================
+   MEMORY VIEW (IMAGE + TEXT)
+========================= */
+.memory-paper{
+  width:90%;
+  max-width:900px;
+  flex-wrap:wrap;
+  justify-content:center;
+}
+
+.paper-left,
+.paper-right{
+  width:100%;
+}
+
+.paper-left img{
+  width:100%;
+  height:auto;
+  max-height:280px;
+}
+
+.paper-right{
+  padding-left:0;
+  padding-top:15px;
+  text-align:center;
+}
+
+@media(min-width:768px){
+  .memory-paper{
+    flex-wrap:nowrap;
+  }
+
+  .paper-left{
+    width:40%;
+  }
+
+  .paper-right{
+    width:60%;
+    text-align:left;
+    padding-left:30px;
+  }
+}
+
+/* =========================
+   BACK BUTTON ALIGNMENT
+========================= */
+.back-btn{
+  position:relative;
+  margin:20px auto 0;
+  display:block;
+}
+
+/* =========================
+   FINAL SURPRISE
+========================= */
+#finalSurprise{
+  padding:20px;
+  text-align:center;
+}
+
+.apology-box{
+  font-size:1.4rem;
+}
+
+@media(max-width:480px){
+  .apology-box{
+    font-size:1.1rem;
+  }
+}
+
+/* =========================
+   LOVE POSTER
+========================= */
+.love-poster{
+  max-width:90%;
+  font-size:2.4rem;
+  padding:40px 30px;
+}
+
+@media(max-width:480px){
+  .love-poster{
+    font-size:1.8rem;
+    padding:30px 20px;
+  }
+}
+
+
 </style>
 </head>
 
